web/css/review-form.css
#review-form {
  --sentence-box-height: 14rem;
}

.cards-container {
  margin: 0px auto;
  height: var(--sentence-box-height);
  width: 50vw;
}

.card-source {
  position: absolute;
  bottom: 20px;
  padding: 0 0.5rem;
  max-height: calc(var(--sentence-box-height) / 2 - 0.5rem);
  word-wrap: anywhere;
}

.card-sentence-box {
  height: var(--sentence-box-height);
  width: 50vw;
  position: relative;
  cursor: pointer;
  background-color: #f8f3f3;
  border: none;
  flex-basis: 100%;
  line-height: 1rem;
  align-items: center;
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  padding: 1em;
}

.card-sentence-box small {
  color: var(--dark-grey-color);
}

.card-review-buttons-section {
  text-align: center;
}

.card-review-buttons-section .buttons {
  display: flex;
  justify-content: center;
}

.review-footer {
  margin-bottom: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.swipe {
  position: absolute;
}

@media screen and (max-width: 1024px) {
  .cards-container {
    width: 100%;
  }
  .card-sentence-box {
    width: var(--max-content-width);
  }
  .card-review-buttons-section {
    justify-content: space-between;
  }
}

